<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/Settings_FMDServer" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMD_Server_General" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/Settings_FMD_Server_Server_URL" />

                <TextView
                    android:id="@+id/textViewServerUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="https://fmd.example.com" />

                <ImageView
                    android:id="@+id/buttonOpenWebClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_open_in_new" />

                <ImageView
                    android:id="@+id/buttonCopyServerUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_content_copy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/Settings_FMD_Server_User_ID" />

                <TextView
                    android:id="@+id/textViewUserId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="abcdefgh" />

                <ImageView
                    android:id="@+id/buttonCopyUserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_content_copy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/Settings_FMD_Server_Fingerprint" />

                <TextView
                    android:id="@+id/textViewFingerprint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="0xcoffee" />

                <ImageView
                    android:id="@+id/buttonCopyFingerprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_content_copy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center_vertical"
                android:minHeight="36dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/Settings_FMD_Server_Connection_Status" />

                <TextView
                    android:id="@+id/textViewConnectionStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Settings_FMD_Server_Connection_Status_Success" />
            </LinearLayout>

            <TextView
                android:id="@+id/serverVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:gravity="center_vertical"
                android:minHeight="24dp"
                android:text="@string/server_version" />

            <Button
                android:id="@+id/buttonChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:ems="10"
                android:text="@string/Settings_FMDServer_Change_Password_Button" />

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:ems="10"
                android:text="@string/Settings_FMDServer_Logout_Button" />

            <Button
                android:id="@+id/buttonDeleteData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:ems="10"
                android:text="@string/Settings_FMDServer_Delete_Account" />

            <!-- Push -->

            <include layout="@layout/activity_f_m_d_server_section_push" />

            <!-- Access control -->

            <include layout="@layout/activity_f_m_d_server_section_access" />

            <!-- Connectivity Check -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Check_Interval_Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Check_Interval_Description" />

            <EditText
                android:id="@+id/editTextCheckInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="8"
                tools:text="4" />

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Check_Notify_After_Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Check_Notify_After_Description" />

            <EditText
                android:id="@+id/editTextNotifyAfterTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="8"
                tools:text="36" />

            <!-- Background Location Upload-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Update_Interval_Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Settings_FMDServer_Update_Interval_Description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Update_Interval_Description_Constraint" />

            <EditText
                android:id="@+id/editTextFMDServerUpdateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="8"
                tools:text="60" />

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Location_Type_Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_Location_Type_Description" />

            <CheckBox
                android:id="@+id/checkBoxFMDServerFused"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fused" />

            <CheckBox
                android:id="@+id/checkBoxFMDServerGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GPS" />

            <CheckBox
                android:id="@+id/checkBoxFMDServerCell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Cell" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_LOW_BAT_Upload_Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Settings_FMDServer_LOW_BAT_Upload_Description" />

            <CheckBox
                android:id="@+id/checkBoxFMDServerLowBatUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/Enable" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
