<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/Settings_OpenCellId" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.wanderwildwood.ibasho.ui.paging.PagingScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <!-- Intro -->

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/network_info_general" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/network_info_privacy" />

            <Button
                android:id="@+id/buttonBeaconDbWebsite"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/beacondb_open_website" />

            <Button
                android:id="@+id/buttonOpenOpenCellIdWebsite"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/OpenCellId_open_website" />

            <!-- Tower Collector -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/network_crowdsourcing_description" />

            <Button
                android:id="@+id/buttonOpenFmdWebsite"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/network_crowdsourcing_button" />

            <!-- API Access Token -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/FMD.Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/opencellid_api_key_title" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/opencellid_api_key_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextOpenCellIDAPIKey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_weight="0.8"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="" />

                <Button
                    android:id="@+id/buttonPaste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paste" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonTestOpenCellId"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/OpenCellId_test_opencellid" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:id="@+id/textViewTestOpenCellIdResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textIsSelectable="true"
                tools:text="Response" />

        </LinearLayout>

    </com.wanderwildwood.ibasho.ui.paging.PagingScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
